# ScriptSmith

./: .gitignore  ENVIRONMENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  RAILWAY_DEPLOYMENT_GUIDE.md  README-MICROSERVICES.md  README.md  TODO.md  WEBSOCKET_CONNECTION_GUIDE.md  build-images.sh  deploy-railway.sh  docker-compose-microservices.yml  docker-compose.yml  quick-test.sh  setup-env.sh  start-dev.sh  test-microservices.sh
backend/: .env.backup  Dockerfile  env.development.example  env.production.example  nixpacks.toml  railway.json  railway.toml  requirements.txt
backend/app/: main.py
docker/: backend.env  frontend.env  postgres.env
docker-images/cpp/: Dockerfile
docker-images/go/: Dockerfile
docker-images/java/: Dockerfile
docker-images/javascript/: Dockerfile
docker-images/python/: Dockerfile
docker-images/rust/: Dockerfile
docs/: ADMIN_SECURITY.md
frontend/: Caddyfile  Dockerfile  env.development.example  env.production.example  index.html  nginx.conf  nginx.railway.conf  nixpacks.toml  package-lock.json  package.json  railway.json  railway.toml  tailwind.config.js
frontend/.railway/: project.json
frontend/src/: App.tsx  index.css
services/: deploy-individual.sh
services/cpp-executor/: Dockerfile  main.cpp  nixpacks.toml  railway.toml  server.py
services/go-executor/: Dockerfile  go.mod  main.go  nixpacks.toml  railway.json  railway.toml
services/java-executor/: Dockerfile  Main.java  nixpacks.toml  pom.xml  (+1 more)
services/rust-executor/: Cargo.toml  Dockerfile  nixpacks.toml  railway.json  railway.toml
services/rust-executor/src/: main.rs
(+69 files in other folders)
