[package]
name = "rust-executor"
version = "1.0.0"
edition = "2021"
authors = ["Code Submission Platform"]
description = "Rust code execution microservice for Railway.app"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
